--- a/app-express/views/includes/head.ejs
+++ b/app-express/views/includes/head.ejs
@@ -6,4 +6,5 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/product.css">
+  <link rel="stylesheet" href="/css/cart.css">
 </head>
